[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Upgrade.gd" type="Script" id=1]
[ext_resource path="res://assets/shop/EggWine.png" type="Texture" id=2]
[ext_resource path="res://assets/shop/RumCoke.png" type="Texture" id=3]
[ext_resource path="res://assets/shop/arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/shop/PornStars.png" type="Texture" id=5]
[ext_resource path="res://assets/shop/Parisienne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/casino-floor-copy.webp" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="SpeedIcon" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="FadeIcon" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="HealthIcon" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="SpeedCost" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 38400.0
margin_top = 16000.0
margin_right = 38800.0
margin_bottom = 16400.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="SpeedCount" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 38400.0
margin_top = 16000.0
margin_right = 38800.0
margin_bottom = 16400.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="SpeedTitle" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 160.0
margin_top = 162.0
margin_right = 560.0
margin_bottom = 262.0
custom_fonts/normal_font = SubResource( 1 )
text = "Speed"

[node name="FadeCost" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 38400.0
margin_top = 16000.0
margin_right = 38800.0
margin_bottom = 16400.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="FadeCount" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 38400.0
margin_top = 16000.0
margin_right = 38800.0
margin_bottom = 16400.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="FadeTitle" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 160.0
margin_top = 262.0
margin_right = 560.0
margin_bottom = 362.0
custom_fonts/normal_font = SubResource( 1 )
text = "Fade"

[node name="HealthCost" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 38400.0
margin_top = 16000.0
margin_right = 38800.0
margin_bottom = 16400.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="HealthCount" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 38400.0
margin_top = 16000.0
margin_right = 38800.0
margin_bottom = 16400.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"

[node name="HealthTitle" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 160.0
margin_top = 362.0
margin_right = 560.0
margin_bottom = 462.0
custom_fonts/normal_font = SubResource( 1 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cash" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 709.0
margin_top = 501.0
margin_right = 1023.0
margin_bottom = 601.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cash2" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 509.0
margin_top = 501.0
margin_right = 709.0
margin_bottom = 601.0
custom_fonts/normal_font = SubResource( 1 )
text = "Funds:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 300.0
margin_top = 30.0
margin_right = 700.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 1 )
text = "Refreshments"

[node name="Leave" type="RichTextLabel" parent="."]
anchor_left = 600.0
anchor_top = 250.0
anchor_right = 640.0
anchor_bottom = 290.0
margin_left = 250.0
margin_top = 460.0
margin_right = 650.0
margin_bottom = 560.0
custom_fonts/normal_font = SubResource( 1 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}
